--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,5 @@ dependencies {
     compile files('libs/slf4j-android-1.6.1-RC1.jar')
     compile files('libs/lucenoid_3.0.2.jar')
     compile files('libs/arqoid_0.5.jar')
+    compile 'com.google.android.gms:play-services-appindexing:8.1.0'
 }
